<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_friend_profile"
        android:layout_width="50dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginVertical="10dp"
        app:strokeWidth="0dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_friend_profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_user_profile"
            android:scaleType="fitXY"/>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tv_friend_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/main_name"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/cv_friend_profile"
        app:layout_constraintStart_toEndOf="@id/cv_friend_profile"
        app:layout_constraintBottom_toTopOf="@+id/tv_friend_description" />

    <TextView
        android:id="@+id/tv_friend_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:maxLines="1"
        android:text="@string/item_friend_description"
        android:textSize="11sp"
        android:textColor="@color/gray"
        app:layout_constraintStart_toStartOf="@id/tv_friend_name"
        app:layout_constraintTop_toBottomOf="@id/tv_friend_name" />

    <LinearLayout
        android:id="@+id/ll_friend_music"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_round_stroke_green"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="@id/cv_friend_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/cv_friend_profile">

        <TextView
            android:id="@+id/tv_friend_music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:maxLines="1"
            android:textSize="9sp"
            tools:text="@string/item_friend_music"/>

        <ImageView
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_play_green" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
